--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,9 +8,11 @@
  */
 
 body {
-background: url(../img/pp.jpg) no-repeat center top;
+
+background: url(../img/pp3.jpg) no-repeat center top;
+
   background-color: #ffffff;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Droid Serif';
     font-weight: 300;
     font-size: 16px;
     color: #000000;
@@ -21,7 +23,7 @@ background: url(../img/pp.jpg) no-repeat center top;
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Droid Serif';
     font-weight: 300;
     color: #000000;
 }
@@ -46,7 +48,7 @@ h4 {
 p {
     line-height: 28px;
     margin-bottom: 25px;
-    font-size: 16px;
+    font-size: 24px;
 }
 
 .centered {
